--- a/ajax-homework.css
+++ b/ajax-homework.css
@@ -4,12 +4,12 @@ body{
     padding: 0;
 }
 .header{
-    background-color: #F3F3F3;
-    background-image: linear-gradient(#F9F9F9, #F3F3F3);
+    background-color: #f3f3f3;
+    background-image: linear-gradient(#f9f9f9, #f3f3f3);
     background-repeat: repeat-x;
-    border-bottom: 1px solid #E5E5E5;
+    border-bottom: 1px solid #e5e5e5;
     min-width: 1000px;
-    text-shadow: 0 1px 0 #FFFFFF;
+    text-shadow: 0 1px 0 #fff;
 }
 .warning{
     color:red;
@@ -49,10 +49,10 @@ body{
     padding: 2px;
 }
 .button{
-    background-color: #EEEEEE;
-    background-image: linear-gradient(#FCFCFC, #EEEEEE);
+    background-color: #eee;
+    background-image: linear-gradient(#fcfcfc, #eee);
     background-repeat: repeat-x;
-    border: 1px solid #D5D5D5;
+    border: 1px solid #d5d5d5;
     border-radius: 3px;
     color: #333333;
     cursor: pointer;
@@ -61,24 +61,24 @@ body{
     font-weight: bold;
     padding: 2px 12px;
     position: relative;
-    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, .9);
     vertical-align: bottom;
     white-space: nowrap;
     text-decoration: none;
     outline:none;
 }
 .button:hover{
-    background-color: #DDDDDD;
-    background-image: linear-gradient(#EEEEEE, #DDDDDD);
+    background-color: #ddd;
+    background-image: linear-gradient(#eee, #ddd);
     background-repeat: repeat-x;
-    border-color: #CCCCCC;
+    border-color: #ccc;
     text-decoration: none;
 }
 .button:active{
-    background-color: #DCDCDC;
+    background-color: #dcdcdc;
     background-image: none;
-    border-color: #B5B5B5;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15) inset;
+    border-color: #b5b5b5;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, .15) inset;
 }
 .info{
     width:220px;
@@ -115,8 +115,8 @@ h1{
     text-overflow: ellipsis;
 }
 .info ul{
-    border-bottom: 1px solid #EEEEEE;
-    border-top: 1px solid #EEEEEE;
+    border-bottom: 1px solid #eee;
+    border-top: 1px solid #eee;
     list-style: none outside none;
     padding: 15px 0;
     position: relative;
